--- a/css/styles.css
+++ b/css/styles.css
@@ -1619,3 +1619,48 @@ footer {
 .footer-content img {
     padding: 30px 10px;
 }
+
+.footer-nav {
+    margin: 20px 0;
+}
+
+.footer-nav li a {
+    font-size: 14px;
+    font-weight: 800;
+    padding: 5px;
+    text-transform: uppercase;
+}
+
+.footer-nav li a i {
+    padding-right: 10px;
+    font-size: 12px;
+}
+
+.footer-nav li a:hover {
+    color: #C0392B !important;
+}
+
+.footer-buttons {
+    padding: 20px 10px;
+}
+
+.footer-buttons a,
+.footer-buttons button {
+    margin-top: 15px;
+}
+
+.register-btn,
+.ft-login-btn {
+    width: 130px;
+    padding: 4px 0;
+    border: 1px solid #2C3E50;
+    font-size: 18px;
+    font-weight: 800;
+    color: #2C3E50 !important;
+    text-transform: uppercase;
+}
+
+.ft-login-btn    {
+    color: #16A085 !important;
+    border: 1px solid #16A085;
+}
