--- a/css/styles.css
+++ b/css/styles.css
@@ -569,17 +569,17 @@ nav > div > div > ul > li > a > i,
     color: #fff;
     position: absolute;
     right: 30px;
-    top: 1px;
-    font-size: 26px;
+    top: 12px;
+    font-size: 20px;
 }
 
 .panel-body {
-    padding: 12px;
+    padding: 6px 0 6px 6px;
 }
 
 .panel-default .panel-body p {
     font-size: 12px;
-    line-height: 10px; 
+    line-height: 16px; 
 }
 
 .panel-notif {
@@ -643,7 +643,7 @@ nav > div > div > ul > li > a > i,
 
 .appmnt-pnl-btns,
 .doctor-panel-btns {
-    padding: 0 10px 5px 10px;
+    padding: 0 10px;
 }
 
 .appmnt-pnl-btn button {
@@ -667,6 +667,7 @@ nav > div > div > ul > li > a > i,
 
 .appmnt-pnl-btn button {
     float: none;
+    padding: 0 10px;
 }
 
 .appmnt-pnl-btn button:last-child {
@@ -765,9 +766,13 @@ a.btn.btn-block.appo.tooltip-bottom {
 
 .sched-panel,
 .dc-profile-sched-panel {
-    min-height: 165px;
+    min-height: 150px;
     border: 2px solid transparent;
     background-color: rgba(236, 240, 241, 0.3) !important;
+    border-right: 2px solid rgba(44, 62, 80, 0.7);
+    border-top: 2px solid #2C3E50;
+    border-bottom: 2px solid rgba(44, 62, 80, 0.7);
+    border-left: 2px solid transparent;
 }
 
 .sched-panel .panel-body,
@@ -780,6 +785,7 @@ a.btn.btn-block.appo.tooltip-bottom {
 .sched-panel .appmnt-pnl-btn button:hover,
 .sched-panel .appmnt-pnl-btn a:hover {
     color: #16A085 !important;
+    background: transparent;
 }
 
 .sched-h {
@@ -1373,7 +1379,7 @@ ul.nav.items-list li:hover {
     border-top: 2px solid #F39C12;
     border-bottom: 2px solid rgba(44, 62, 80, 0.4);
     border-left: 2px solid transparent;
-    min-height: 142px;
+    min-height: 135px;
     word-wrap: break-word;
 }
 
