--- a/admin/css/scrolltop.css
+++ b/admin/css/scrolltop.css
@@ -7,12 +7,12 @@
     z-index: 99999999;
     background-color: #16A085;
     color: #ecf0f1;
-    width: 50px;
+    width: 48px;
     height: 48px;
     line-height: 48px;
     right: 30px;
     bottom: 30px;
-    border: 1px solid;
+    border: 1px solid transparent;
     border-radius: 50%;
     -webkit-transition: all 0.5s ease-in-out;
     -moz-transition: all 0.5s ease-in-out;
@@ -29,5 +29,5 @@
     opacity: 1.0;
 }
 .scroll-top-wrapper i.fa {
-    line-height: inherit;
+    font-size: 24px;
 }
