--- a/css/scrolltop.css
+++ b/css/scrolltop.css
@@ -5,7 +5,7 @@
     overflow: hidden;
     text-align: center;
     z-index: 99999999;
-    background-color: #16A085;
+    background-color: rgba(52, 73, 94, 0.8);
     color: #ecf0f1;
     width: 48px;
     height: 48px;
@@ -21,7 +21,7 @@
     transition: all 0.5s ease-in-out;
 }
 .scroll-top-wrapper:hover {
-    background-color: #888888;
+    background-color: #2C3E50;
 }
 .scroll-top-wrapper.show {
     visibility:visible;
