--- a/css/styles.css
+++ b/css/styles.css
@@ -468,7 +468,7 @@ nav > div > div > ul > li > a > i,
 
 .row-header-black {
     color: #34495E;
-
+    font-size: 21px !important;
 }
 
 .row-header2-fff {
@@ -539,7 +539,6 @@ nav > div > div > ul > li > a > i,
 }
 
 .panel-default .panel-heading {
-    margin: -2px;
     color: #fff !important;
     font-weight: 800;
     background-color: #17A697 !important;
@@ -700,6 +699,12 @@ nav > div > div > ul > li > a > i,
     text-decoration: none;
     float: right;
     z-index: 1;
+}
+
+.doctor-panel-btns a {
+    padding: 0 6px;
+    font-size: 18px;
+    color: #34495E !important;
 }
 
 .appmnt-pnl-btns button {
@@ -1106,7 +1111,7 @@ a.btn.btn-block.appo.tooltip-bottom {
     position: absolute;
     right: 30px;
     bottom: 20px;
-    padding: 8px 12px;
+    padding: 5px 7px;
     color: #fff !important;
     font-size: 14px;
     background-color: #E67E22;
@@ -1435,10 +1440,7 @@ ul.nav.items-list li:hover {
 
 .doctor-panel {
     background-color: #F1C40F !important;
-    border-right: 2px solid rgba(44, 62, 80, 0.4);
-    border-top: 2px solid #F39C12;
-    border-bottom: 2px solid rgba(44, 62, 80, 0.4);
-    border-left: 2px solid transparent;
+    border: 2px solid transparent;
     min-height: 146px;
     word-wrap: break-word;
 }
@@ -1613,15 +1615,13 @@ ul.nav.items-list li:hover {
 .clinic-box {
     margin-bottom: 10px;
     padding: 10px 12px;
-    background: rgba(52, 73, 94, 0.6);
+    background: rgba(52, 73, 94, 0.4);
     min-height: 120px;
+    text-shadow: 0px 1px 1px #35404F;
 }
 
-.clinic-box h2 {
-    margin: 0 0 6px 0;
-    color: #1ABC9C;
-    font-size: 14px;
-    text-transform: uppercase;
+.clinic-name {
+    margin: 0;
 }
 
 .clinic-box span {
@@ -1725,6 +1725,23 @@ ul.nav.items-list li:hover {
 
 .help-text {
     font-size: 16px;
+}
+
+.pagination a {
+    padding: 6px 10px !important;
+    font-size: 15px;
+    font-weight: 900;
+    line-height: 1 !important;
+    background: transparent !important;
+    border: 2px solid #BDC3C7 !important;
+}
+
+.pagination a:hover {
+    border: 2px solid #16A085 !important;
+}
+
+.border-bottom {
+    border-bottom: 2px solid red !important;
 }
 
 footer {
