--- a/css/styles.css
+++ b/css/styles.css
@@ -1269,6 +1269,10 @@ a.btn.btn-block.appo.tooltip-bottom {
     font-style: italic;
 }
 
+.frontdesk .search-doctor-info {
+    height: 90px;
+}
+
 .frontdesk .search-doctor-info p {
     color: #0F5959;
     text-shadow: none;
@@ -1277,7 +1281,7 @@ a.btn.btn-block.appo.tooltip-bottom {
 .frontdesk .search-doctor-info .addToQueueBtn {
     position: absolute;
     right: 20px;
-    bottom: 40px;
+    bottom: 60px;
 }
 
 .export-schedules {
@@ -1485,6 +1489,15 @@ ul.nav.items-list li:hover {
     border: 2px solid #F39C12;
 }
 
+.doctor-panel img {
+    position: absolute;
+    height: 40px;
+    width: 40px;
+    top: 6px;
+    right: 24px;
+    border-radius: 50%;
+}
+
 .subscribeUnsubscribe {
     width: 60% !important;
     -webkit-box-shadow: 3px 4px 6px -2px rgba(0, 0, 0, 0.5);
@@ -1690,6 +1703,10 @@ ul.nav.items-list li:hover {
     word-wrap: break-word;
 }
 
+.clinic-inqueue span {
+    font-weight: 900;
+}
+
 .cutoff {
     margin: 6px 0 0 0 !important;
     font-size: 12px !important;
@@ -1753,8 +1770,19 @@ ul.nav.items-list li:hover {
 }
 
 .help-text {
-    font-size: 16px;
+    font-size: 18px;
     text-shadow: 0px 1px 0px #34495E;
+}
+
+.help-text h4 {
+    margin-bottom: 20px;
+    font-size: 20px;
+    text-transform: uppercase;
+}
+
+.help-text p {
+    margin-bottom: 15px;
+    line-height: 1.3;
 }
 
 .pagination a {
