--- a/css/styles.css
+++ b/css/styles.css
@@ -1556,6 +1556,44 @@ ul.nav.items-list li:hover {
     border-radius: 50%;
 }
 
+.list-group-item {
+    background-color: rgba(191, 212, 217, 0.7) !important;
+}
+
+a.list-group-item:hover, a.list-group-item:focus {
+    color: #555 !important;
+    text-decoration: none !important;
+    background-color: rgba(191, 212, 217, 0.3) !important;
+}
+
+.list-group-item-heading {
+    font-size: 14px !important;
+    text-transform: uppercase !important;
+    font-weight: 900 !important;
+}
+
+.list-group-item-text {
+    font-size: 14px !important;
+    font-weight: 600 !important;
+}
+
+.list-group-item:last-child {
+    padding: 5px 15px !important;
+    font-size: 14px !important;
+    font-weight: 600;
+}
+
+.list-group-item:last-child i {
+    padding-left: 5px;
+    color: transparent !important;
+}
+
+.list-group-item:last-child:hover,
+.list-group-item:last-child:hover i {
+    color: #C0392B !important;
+    transition: 0.5s;
+}
+
 .subscribeUnsubscribe {
     width: 60% !important;
     -webkit-box-shadow: 3px 4px 6px -2px rgba(0, 0, 0, 0.5);
